scss/main.scss
$primary-font: "Poppins", sans-serif;

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  scroll-behavior: smooth;
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
  padding: 0;
  margin: 0;
}

figure {
  margin: 0;
  padding: 0;
  figcaption {
    margin: 0;
    padding: 0;
  }
}

body {
  background: url("../images/hero-bg-sm.svg") no-repeat top right,
    linear-gradient(94.59deg, #151515 7.26%, #2c3535 99.74%);
  font-family: $primary-font;
  overflow-y: hidden;
}

.container {
  width: 80%;
  margin: auto;
}

.loader {
  position: fixed;
  background: linear-gradient(94.59deg, #151515 7.26%, #2c3535 99.74%);
  top: 0;
  left: 0;
  width: 100%;
  height: 100vh;
  z-index: 1;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: #fff;
  .spinner {
    width: 60px;
    height: 60px;
    margin: auto;
    border: solid 5px transparent;
    border-top-color: #33f9f9;
    border-right-color: #33f9f9;
    border-radius: 50%;
    animation: rotateIcon 1s linear infinite;
  }
}
.finished-loading {
  opacity: 0;
  pointer-events: none;
}

.hero {
  height: 100vh;
  width: 100%;
  display: flex;
  align-items: center;
  position: relative;
  &__content {
    width: 400px;
  }
  &__header {
    font-size: 50px;
    color: #fff;
    margin-bottom: 12px;
    position: relative;
    &-highlight {
      color: #33f9f9;
    }
    &::before {
      content: "";
      width: 100%;
      height: 100%;
      position: absolute;
      top: -30px;
      left: 3px;
      background: url("../images/dot-pattern.svg") no-repeat;
    }
  }
  &__sub-header {
    color: #b7b7b7;
    font-weight: 400;
    font-size: 18px;
  }
  .scroll-icon {
    position: absolute;
    bottom: 10%;
    left: 50%;
    transform: translateX(-50%);
    width: 25px;
    height: 50px;
    border: solid 2px rgb(216, 213, 213);
    border-radius: 25px;
    &::after {
      content: "";
      display: block;
      width: 6px;
      height: 6px;
      border-radius: 50%;
      position: absolute;
      left: 50%;
      top: 15%;
      text-align: center;
      transform: translateX(-50%);
      background: rgb(216, 213, 213);
      animation: scroll-animation 1.4s ease 0s infinite normal forwards;
    }
  }
}

#mid-section {
  height: 40vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.projects-section {
  padding: 10% 5%;
  background: url("../images/blob.svg") no-repeat center center / contain;
  > ul {
    display: grid;
    row-gap: 30px;
  }
}

.project {
  background: rgba(2, 2, 2, 0.5);
  backdrop-filter: blur(40px);
  display: grid;
  grid-template-columns: 1fr;
  row-gap: 20px;
  margin-bottom: 20px;
  border-radius: 20px;
  &__thumbnail {
    position: relative;
    img {
      border-radius: 20px 20px 0 0;
      width: 100%;
    }
  }
  &__play-btn {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    background: none;
    border: 0;
    outline: none;
    &:hover {
      cursor: pointer;
    }
  }
  &__title {
    margin-top: 0;
    margin-bottom: 8px;
    color: #fff;
  }
  &__role {
    margin-top: 0;
    font-size: 16px;
    color: #33f9f9;
  }
  &__description {
    line-height: 1.5;
    margin-bottom: 20px;
  }
  &__content {
    color: #fafafa;
    &-wrapper {
      padding: 0 20px 30px;
    }
  }
  &__skills-list {
    display: inline-flex;
    margin-bottom: 10px;
  }
  &__skill {
    background: #0b42e5;
    border-radius: 25px;
    padding: 6px 18px;
    font-size: 14px;
    &:not(:last-child) {
      margin: 0 10px 0 0;
    }
  }
  &__link {
    float: right;
    color: #33f9f9;
    padding: 5px 10px;
    border-radius: 4px;
    font-family: $primary-font;
    &-icon {
      font-size: 1.9rem;
    }
    &:hover {
      color: #25b8b8;
    }
  }
}

.social-list {
  height: 15vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.social {
  margin: 0 10px;
  &__link {
    color: #33f9f9;
    padding: 10px;
  }
  &__icon {
    font-size: 1.4em;
  }
}

.modal {
  display: none;
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: rgba(0, 0, 0, 0.7);
  backdrop-filter: blur(40px);
  &__wrapper {
    position: relative;
    height: 100vh;
  }
  &__close-btn {
    position: absolute;
    top: 20px;
    right: 0;
    background: transparent;
    border: 0;
    outline: none;
    cursor: pointer;
  }
  &__content {
    position: absolute;
    display: block;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 250px;
    width: 100%;
  }
}

.modal--active {
  display: block;
}

.js-play-btn {
  cursor: pointer;
}

@media screen and (min-width: 768px) {
  html {
    font-size: 21px;
  }

  body {
    background: url("../images/hero-bg-lg.svg") no-repeat top right,
      linear-gradient(94.59deg, #151515 7.26%, #2c3535 99.74%);
  }

  .hero {
    &__content {
      width: 600px;
    }
    &__header {
      font-size: 60px;
    }
    &__sub-header {
      font-size: 20px;
    }
  }

  .projects-section {
    padding: 2% 8%;
    ul {
      grid-template-columns: 1fr;
      gap: 30px;
    }
  }
  .project {
    &__title {
      font-size: 1.2em;
    }
  }
  .modal__content {
    height: 450px;
  }
}

@media screen and (min-width: 1024px) {
  .hero {
    &__social-links {
      position: fixed;
      top: 50px;
      left: 40px;
    }
    &__social-link {
      display: block;
      &:not(:last-child) {
        margin-bottom: 16px;
      }
    }
    .quote {
      top: 50%;
      left: 10%;
      transform: translateY(-50%);
      text-align: right;
    }
  }

  .project {
    display: grid;
    grid-template-columns: 1fr 1fr;
    column-gap: 20px;
    height: auto;
    &__thumbnail {
      flex-basis: 50%;
      img {
        display: block;
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-bottom-left-radius: 20px;
        border-bottom-right-radius: 20px;
      }
    }
    &__content {
      flex-basis: 50%;
      &-wrapper {
        text-align: initial;
        padding: 30px 26px;
        display: flex;
        flex-direction: column;
        position: relative;
      }
    }
    &__skills-list {
      margin-top: auto;
    }
    &__description {
      font-size: 0.9em;
      line-height: 1.5;
      margin-bottom: 2rem;
    }
    &__link {
      position: absolute;
      right: 10px;
      bottom: 30px;
    }
    &__link-icon {
      font-size: 1.4rem;
    }
  }
}

@media screen and(min-width:2560px) {
  html {
    font-size: 35px;
  }
  .hero__social-links {
    left: 80px;
  }
}

@keyframes rotateIcon {
  0% {
    transform: rotate(0);
    transform: rotate(0);
  }
  100% {
    transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

@keyframes scroll-animation {
  from {
    opacity: 1;
    top: 10%;
  }
  to {
    opacity: 0;
    top: 50%;
  }
}

